# omni-multi-agent

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
config/: departments.yaml  models.yaml  settings.yaml  skills.yaml
migrations/: env.py
migrations/versions/: 001_initial.py
src/omni/: main.py
src/omni/api/: app.py
src/omni/api/routes/: __init__.py  health.py  sessions.py  tasks.py
src/omni/core/: config.py  constants.py  exceptions.py  logging.py  models.py  state.py
src/omni/crews/: __init__.py  base.py
src/omni/crews/analysis/: agents.py  crew.py
src/omni/crews/coding/: agents.py  crew.py
src/omni/crews/do/: agents.py  crew.py
src/omni/crews/github/: agents.py  crew.py
src/omni/crews/research/: agents.py  crew.py
src/omni/crews/social/: agents.py  crew.py
src/omni/crews/writing/: agents.py  (+1 more)
src/omni/dashboard/: main.py
src/omni/db/: engine.py  models.py
src/omni/memory/: __init__.py  context.py  long_term.py  short_term.py
src/omni/orchestrator/: checkpointer.py  edges.py  graph.py  prompts.py
src/omni/registry/: __init__.py  crew_registry.py  validator_registry.py
src/omni/skills/: base.py  browser.py  calculator.py  computer.py  file.py  github.py  registry.py  screenshot.py  search.py  shell.py
src/omni/validators/: __init__.py  base.py
tests/: conftest.py
tests/integration/: test_complete_system.py  test_database.py  test_phase4_crew.py
tests/unit/: test_constants.py  test_exceptions.py  test_memory.py  test_phase6.py  test_skills.py  test_state.py  test_validators.py
(+20 files in other folders)
